--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ h2,h3{font-size:26px}
 <div class="container">
 
 <div class="card" id="passwordScreen">
-<h2>Hi Pretty!</h2>
+<h2>Hi Pretty Mai!</h2>
 <input id="passwordInput" type="password" placeholder="Secret password">
 <button id="unlockBtn">Unlock 🌷</button>
 <p id="error" style="color:#FFC0CB"></p>
@@ -220,7 +220,7 @@ h2,h3{font-size:26px}
 <!-- PHOTO MODAL -->
 <div class="modal" id="photoModal" style="display:none">
 <div class="card">
-<img src="photo.jpg" class="full-photo">
+<img src="marquinez.jpg" class="full-photo">
 </div>
 </div>
 
