--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ board.appendChild(s);
 const p=document.createElement("div");
 p.className="piece"
 p.dataset.index=i;
-p.style.backgroundImage="url('photo.jpg')"
+p.style.backgroundImage="url('marquinez.jpg')"
 p.style.backgroundPosition=`${(i%4)*100/3}% ${Math.floor(i/4)*100/3}%`;
 p.onclick=()=>{
 document.querySelectorAll(".piece").forEach(x=>x.classList.remove("selected"));
