--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ h2,h3{font-size:26px}
 <!-- CONGRATS -->
 <div class="modal" id="completeModal" style="display:none">
 <div class="card">
-<h2>From my heart</h2>
+<h2>wait there's more</h2>
 <button id="claimReward">tap here for a surprise 🌷</button>
 </div>
 </div>
@@ -242,7 +242,7 @@ Back 🌷
 </div>
 </div>
 
-<audio id="music" src="song.mp3" loop></audio>
+<audio id="music" src="palagi.mp3" loop></audio>
 
 <script>
 const PASSWORD="12182025"
@@ -261,12 +261,15 @@ Always kang pipiliin mahal sa anomang sitwasyon at handa akong intindihin ka, in
 And lastly (may pa lastlyHAHHA) thankyou sa malawak na pasensya, thankyou sa palaging pagintindi, thankyou sa patuloy na pagpili, thankyou sa love at maraming maraming thankyou sa lahat lahat.
 You know the rest na , you're girlfriend always here.
 
-I love you so muchhhhh
-i miss you so much,
-Magiingat palagi💗
+I love you so muchhhhh.
 
-Travel?hmmHAHAHAHHA
+Super duper miss na kita
+Mag-iingat ka palagi💗 
+Travel?hmm saan?HAHAHAHHA
 bawi ako pag uwi mahal mwuahhh
+
+
+Happy Valentines day Mai💗
 
 Forever yours,
 Jo💗`;
